--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="cloud-cust-gateway">
+    <wb-module deploy-name="cloud-gateway-server">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/java"/>
-        <property name="context-root" value="cloud-cust-gateway"/>
-        <property name="java-output-path" value="/cloud-cust-gateway/target/classes"/>
+        <property name="java-output-path" value="/cloud-gateway-server/target/classes"/>
+        <property name="context-root" value="cloud-gateway-server"/>
     </wb-module>
 </project-modules>
